# differential_robot

./: README.md
bot_control/: CMakeLists.txt  package.xml
bot_control/launch/: laser_visualization.launch.py
bot_control/rviz/: laser_visualization.rviz
bot_control/scripts/: reading_laser.cpp
bot_world/: CMakeLists.txt  package.xml
bot_world/worlds/: world1  world2
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bot_control/lib/bot_control/: reading_laser
install/bot_control/share/ament_index/resource_index/package_run_dependencies/: bot_control
install/bot_control/share/ament_index/resource_index/parent_prefix_path/: bot_control
install/bot_control/share/bot_control/: package.sh
install/bot_description/lib/bot_description/: controller  diffdrive
install/bot_description/share/bot_description/: local_setup.sh  package.sh  package.xml
install/bot_description/share/bot_description/launch/: spawn.launch.py
install/bot_description/share/bot_description/rviz/: bot.rviz
install/bot_world/share/ament_index/resource_index/package_run_dependencies/: bot_world
install/bot_world/share/bot_world/: package.sh
install/bot_world/share/bot_world/launch/: spawn_bot.launch.py
install/bot_world/share/bot_world/worlds/: world1.world  world2.world
log/: latest_build
src/bot_description/: CMakeLists.txt
src/bot_description/description/: bot.urdf  gazebo_control.xacro
src/bot_description/launch/: controller.launch.py  final.launch.py  view_bot.launch.py
src/bot_description/src/: controller.cpp  diffdrive.cpp  spawn_bot.cpp
(+2 files in other folders)
